<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionGroup="true"
    tools:theme="@style/Theme.Temzone">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationContentDescription="@string/arrow_back_navigation_content_description"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/settings"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        style="?attr/textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textAllCaps="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/notifications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications" />

    <TextView
        style="?attr/textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/terms_of_service_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_service" />

    <TextView
        android:id="@+id/privacy_policy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_out_button_text" />

    <TextView
        android:id="@+id/version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:text="Version 0.1.0" />

</LinearLayout>
