<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    tools:theme="@style/Theme.Temzone">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wave_drawable_height"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave_icon" />

    <TextView
        android:id="@+id/branding_text_view"
        style="?attr/textAppearanceTitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxWidth="@dimen/wave_drawable_text_max_width"
        android:paddingTop="@dimen/wave_drawable_text_padding_top"
        android:text="@string/sign_up_branding_title"
        android:textColor="?attr/colorSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        style="?attr/textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxWidth="@dimen/wave_drawable_text_max_width"
        android:text="@string/sign_up_branding_subtitle"
        android:textColor="?attr/colorSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branding_text_view" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationContentDescription="@string/arrow_back_navigation_content_description"
            app:navigationIcon="@drawable/arrow_back_icon"
            app:navigationIconTint="?attr/colorSurface" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email_field_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/email_field_placeholder"
            app:startIconContentDescription="@string/email_field_content_description"
            app:startIconDrawable="@drawable/email_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password_field_hint"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
            app:placeholderText="••••••••"
            app:startIconContentDescription="@string/password_field_content_description"
            app:startIconDrawable="@drawable/lock_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password_field_hint"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
            app:placeholderText="••••••••"
            app:startIconContentDescription="@string/repeat_password_field_content_description"
            app:startIconDrawable="@drawable/lock_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/law_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_password_text_input_layout">

            <TextView
                style="@style/TextAppearance.Temzone.Link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy_policy_link_prefix" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/privacy_policy_text_view"
                    style="@style/TextAppearance.Temzone.Link.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_link" />

                <TextView
                    style="@style/TextAppearance.Temzone.Link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/spacer"
                    android:text="@string/terms_of_service_link_prefix" />

                <TextView
                    android:id="@+id/terms_of_service_text_view"
                    style="@style/TextAppearance.Temzone.Link.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_service_link" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/law_linear_layout" />

        <LinearLayout
            android:id="@+id/sign_up_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button">

            <TextView
                style="@style/TextAppearance.Temzone.Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacer"
                android:text="@string/sign_in_link_prefix" />

            <TextView
                android:id="@+id/sign_in_text_view"
                style="@style/TextAppearance.Temzone.Link.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_link" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
