<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description_text_view"
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem[14]" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="?attr/textAppearanceBodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height" />

                    <TextView
                        android:id="@+id/height_text_view"
                        style="?attr/textAppearanceBodyMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        tools:text="@tools:sample/lorem[0]" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="?attr/textAppearanceBodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight" />

                    <TextView
                        android:id="@+id/weight_text_view"
                        style="?attr/textAppearanceBodyMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        tools:text="@tools:sample/lorem[0]" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/gender_text_view"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@tools:sample/lorem[0]" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/catch_rate" />

            <TextView
                android:id="@+id/catch_rate_text_view"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@tools:sample/lorem[0]" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_yield" />

            <TextView
                android:id="@+id/tv_yield_text_view"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@tools:sample/lorem[0]" />

        </LinearLayout>

        <TextView
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/traits" />

        <TextView
            android:id="@+id/primary_trait_text_view"
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@tools:sample/lorem[0]" />

        <TextView
            android:id="@+id/secondary_trait_text_view"
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@tools:sample/lorem[0]" />

        <TextView
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location" />

        <TextView
            android:id="@+id/condition_text_view"
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@tools:sample/lorem[0]"
            app:drawableStartCompat="@drawable/ic_warning_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rate" />

            <TextView
                android:id="@+id/rate_text_view"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@tools:sample/lorem[0]" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level" />

            <TextView
                android:id="@+id/level_text_view"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@tools:sample/lorem[0]" />

        </LinearLayout>

        <ImageView
            android:id="@+id/location_image_view"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/temtem_location_content_description"
            android:maxHeight="320dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
